# bookblisss

./: .gitignore  CMakeLists.txt  README.md  install.bat  install.sh  main.cpp  main.html  package-lock.json  package.json  requirements.txt  sales_system
.github/workflows/: build.yml
